add tailwind, stylelint, etc

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,14 @@
 // *************************************
-// ***** Vendor
+// ***** Tailwind
 // *************************************
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+// *************************************
+// ***** Base
+// *************************************
+@import "./base/elements";
 
 // *************************************
 // ***** Util
